# skill-quant-research

./: README.md  SKILL.md  pyproject.toml  quant.py  requirements.txt
.github/workflows/: ci.yml
tests/: test_main.py
