[project]
name = "skill-quant-research"
version = "1.1.0"
description = "Quantitative research assistant for factor analysis, backtesting, and portfolio optimization"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "flake8>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["."]

[tool.flake8]
max-line-length = 120
extend-ignore = [
    "E203",
    "E266",
    "E402",
    "E501",
    "E722",
    "E731",
    "W503",
]
per-file-ignores = [
    "quant.py:E402",
]
